--- a/_test/simple_js.html
+++ b/_test/simple_js.html
@@ -18,9 +18,9 @@
 
 
 <script type="text/javascript">
-  var number = 1;
-  var elNumber = document.getElementById('number');
-  var buttonIcrease = document.getElementById('increase');
+  let number = 1;
+  let elNumber = document.getElementById('number');
+  let buttonIcrease = document.getElementById('increase');
 
   buttonIcrease.onclick = function() {
     number += 2;
