--- a/_test/index.html
+++ b/_test/index.html
@@ -9,38 +9,14 @@
     <link rel="icon" href="{{ site.baseurl }}/images/system/{{ site.favicon1 }}">
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
-    <link rel="stylesheet" type="text/css" href="_css/theme_min.css">
+    <link rel="stylesheet" type="text/css" href="css/lotto.css">
 
 </head>
 
 
 
 <style>
-  #NUMBERS {
-    margin-top: 5vh;
-    font-size: 3em;
-    color: #fff;
-    text-align: center;
-  }
 
-  b {
-    display: inline-block;
-    width: 80px;
-    height: 80px;
-    line-height: 80px;
-    border-radius: 64px;
-    margin: 1px;
-  }
-
-  .btn-custom {
-    margin: 0;
-    background-color: #f5b86f;
-    cursor: pointer;
-    font-family: $helveticaNeue;
-    font-weight: 600;
-    font-size: 28px;
-    letter-spacing: 0px;
-  }
 </style>
 
 
@@ -62,22 +38,6 @@
     <button class="btn btn-lg btn-success" name="RELOAD">RELOAD</button>
   </a>
 </div>
-
-<br><br><br>
-
-<table width='350' align='center' cellpadding='15' border='0'>
-  <tr>
-    <td>
-
-      <!-- 깃 지스트 (Git Gist) 코드보기 :: 자바 스크립트 -->
-      <script src="https://gist.github.com/onitonitonito/691eb751b86957029904a2d551d6f47f.js">
-      </script>
-
-    </td>
-  </tr>
-</table>
-
-
 
 
 <script>
