--- a/_test/src/photoAlbum.html
+++ b/_test/src/photoAlbum.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>test album</title>
+    <link rel="shortcut icon" href="./img/favicon.ico">
   </head>
-  <body>
-    <h1>Hello~! React!</h1>
 
+  <body>
+    <!-- JS will render id=ROOT -->
     <div id="ROOT"></div>
 
-
+    <!-- Additional tag for increase i=0 value -->
+    <div id='iNumber'>i=0</div>
     <button type="button" name="btn-01" onclick="buttonIcrease()">
-      Click to Change!
+      Click to Next Picture!
     </button>
 
   </body>
