--- a/src/photoAlbum/photoAlbum.html
+++ b/src/photoAlbum/photoAlbum.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>test album</title>
-    <link rel="shortcut icon" href="./img/favicon.ico">
+    <link rel="shortcut icon" href="../../public/favicon-1.ico">
   </head>
 
   <body>
@@ -12,6 +12,7 @@
 
     <!-- Additional tag for increase i=0 value -->
     <div id='iNumber'>i=0</div>
+    <br />
     <button type="button" name="btn-01" onclick="buttonIcrease()">
       Click to Next Picture!
     </button>
